--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "いわき養蜂場 サイトソース",
   "main": "index.php",
   "scripts": {
-    "dev":"npx webpack -w --mode development",
-    "pro":"npx webpack -w --mode production"
+    "dev": "npx webpack -w --mode development",
+    "pro": "npx webpack -w --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@webpack-cli/init": "^1.1.3",
+    "autoprefixer": "^10.4.16",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.0",
+    "sass-loader": "^13.3.2",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
-    "webpack-stream": "^7.0.0"
+    "webpack-fix-style-only-entries": "^0.6.1",
+    "webpack-stream": "^7.0.0",
+    "webpack-watched-glob-entries-plugin": "^2.2.6"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
